Fix unused parameter warning in AccessibilityObject::previousLineStartPosition when !ENABLE(ACCESSIBILITY) https://bugs.webkit.org/show_bug.cgi?id=238629

Reviewed by Yusuke Suzuki.

* accessibility/AccessibilityObject.h:
(WebCore::AccessibilityObject::previousLineStartPosition const):



Canonical link: https://commits.webkit.org/249092@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@292189 268f45cc-cd09-0410-ab3c-d52691b4dbfc